--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "csv-writer": "^1.6.0",
+    "csvtojson": "^2.0.10",
     "mysql": "^2.18.1",
     "puppeteer": "^4.0.1"
   },
